 - Add team 'enabled' switch which defaults to true, but when
   disabled makes a team to immediately disappear from the
   scoreboard and renders their team interface unusable.
 - Support 'first for contest/team/problem' comments for balloons.
 - Change ISO 3166-1 country codes from alpha-2 to alpha-3.
 - Use CPU time as primary limit (port from ETH tree).

Version 3.2.0 - SVN r3594 (unreleased)
--------------------------------------
 - Add better support for interactive problems, add sample problem.
 - New, redesigned single page "dashboard" team web interface.
 - Change execute() function for more flexible I/O redirection.
 - Add runpipe program for connecting stdin/out of two processes.
 - Rename compare_program.sh to *_wrapper, allow symlinked usage.
 - Add FLOAT command and exponentiation to checktestdata program.
 - Add countdown before contest and timezone to clock.
 - Add daemon support in C/PHP libraries, use for submit/judgedaemon.
 - Add category to balloons list and button to view only unsent.
 - Lots of small changes to C/C++ sources and build system for better
   POSIX compliance and portability; support LLVM clang compiler.
 - Replace bash by POSIX shell in compile, testcase_run. (Closes: #1735673)
 - Create separate execdir subdir for judging. (Closes: #3041492)
 - Replace setuid root installation of runguard with invocation
   via sudo.
 - Fix missing permissions for plugin interface SQL user.
 - Remove CHROOTDIR (mountpoint prefix) variable to avoid confusion
   with the directory where the Java chroot was created.
 - Redirect to submissions overview page after verification.
 - Fix information leak in clarification problems list. (Closes: #3096018)
 - In JS problem name detection, probid needs to be casenormalised too.
 - Fix websubmit when using numeric problem ID's, thanks Vladimir Vassiliev.
 - Allow specification of contest times relative to starttime.
 - Add toggle button for autorefresh of jury pages (port from ETH tree).