@@ -29,6 +29,8 @@ Version 3.3.0 - DEV
  - Support 'first for contest/team/problem' comments for balloons.
  - Change ISO 3166-1 country codes from alpha-2 to alpha-3.
  - Use CPU time as primary limit (port from ETH tree).
+ - Move checktestdata code to separate library for easier use in
+   stand-alone checkers, and add 'IF() [ELSE] END' syntax.
 
 Version 3.2.0 - SVN r3594 (unreleased)
 --------------------------------------
